fix: book page layout shift
* load breadcrumb earlier
* hide footer until main content is loaded

--- a/prisma/prisma-cloud/blocks/breadcrumbs/breadcrumbs.css
+++ b/prisma/prisma-cloud/blocks/breadcrumbs/breadcrumbs.css
@@ -2,6 +2,11 @@ main .breadcrumbs-container {
     padding: 0;
     position: relative;
     width: 100vw;
+    visibility: hidden;
+}
+
+main .breadcrumbs-container[data-section-status="loaded"] {
+    visibility: visible;
 }
 
 .landing-product .breadcrumbs-container {
